// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableHeaderRow should be rendered correctly with extra props 1`] = `
<div
  className="container uui-table-row-container root uui-table-header-row container align-items-top"
>
  <div
    className="flexCell -clickable"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
    onMouseUp={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "96px",
        "flexGrow": 0,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <label
      className="container root size-12 theme-light color-sky -clickable"
      role="checkbox"
    >
      <div
        className="uui-checkbox"
      >
        <input
          aria-checked={false}
          checked={false}
          onChange={[Function]}
          type="checkbox"
        />
      </div>
    </label>
    <div>
      <div
        className=""
      >
        <div
          className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
        >
          ID
        </div>
        <div
          className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#sort.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      onMouseDown={[Function]}
    />
  </div>
  <div
    className="scrollableColumnsWrapper"
    style={
      Object {
        "flexGrow": 100,
        "flexShrink": 1,
        "minWidth": 0,
        "width": 0,
      }
    }
  >
    <div
      className="scrollableColumnsContainer"
    >
      <div
        className="container align-items-top"
      >
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "200px",
              "flexGrow": 1,
              "flexShrink": undefined,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                name
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort_asc-12.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            onMouseDown={[Function]}
          />
        </div>
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "150px",
              "flexGrow": undefined,
              "flexShrink": undefined,
              "minWidth": "200px",
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                Level
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            onMouseDown={[Function]}
          />
        </div>
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "120px",
              "flexGrow": 1,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                DATE
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
          <div
            onMouseDown={[Function]}
          />
        </div>
      </div>
    </div>
    <div
      className="scrollShadowLeft"
    />
    <div
      className="scrollShadowRight"
    />
  </div>
</div>
`;

exports[`DataTableHeaderRow should render with default props 1`] = `
<div
  className="container uui-table-row-container root uui-table-header-row container align-items-top"
>
  <div
    className="flexCell -clickable"
    onClick={[Function]}
    style={
      Object {
        "alignSelf": undefined,
        "flexBasis": "96px",
        "flexGrow": 0,
        "flexShrink": undefined,
        "minWidth": 0,
        "textAlign": undefined,
      }
    }
  >
    <div>
      <div
        className=""
      >
        <div
          className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
        >
          ID
        </div>
        <div
          className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
          href={null}
          onClick={[Function]}
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
              height={24}
              viewBox="0 0 12 24"
              width={12}
            >
              <use
                xlinkHref="#sort.svg"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="scrollableColumnsWrapper"
    style={
      Object {
        "flexGrow": 100,
        "flexShrink": 1,
        "minWidth": 0,
        "width": 0,
      }
    }
  >
    <div
      className="scrollableColumnsContainer"
    >
      <div
        className="container align-items-top"
      >
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "200px",
              "flexGrow": 1,
              "flexShrink": undefined,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                name
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort_asc-12.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "150px",
              "flexGrow": undefined,
              "flexShrink": undefined,
              "minWidth": "200px",
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                Level
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="flexCell -clickable"
          onClick={[Function]}
          style={
            Object {
              "alignSelf": undefined,
              "flexBasis": "120px",
              "flexGrow": 1,
              "flexShrink": 0,
              "minWidth": 0,
              "textAlign": undefined,
            }
          }
        >
          <div>
            <div
              className=""
            >
              <div
                className="text font-sans color-night700 line-height-18 font-size-14 v-padding-9 container"
              >
                DATE
              </div>
              <div
                className="container uui-button-box uui-enabled root size-24 color-night400 font-sans-semibold uui-has-left-icon uui-no-right-icon"
                href={null}
                onClick={[Function]}
                onKeyDown={[Function]}
                role="button"
                tabIndex={0}
              >
                <div
                  className="container uui-icon uui-enabled"
                  style={Object {}}
                >
                  <svg
                    className=""
                    height={24}
                    viewBox="0 0 12 24"
                    width={12}
                  >
                    <use
                      xlinkHref="#sort.svg"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="scrollShadowLeft"
    />
    <div
      className="scrollShadowRight"
    />
  </div>
</div>
`;
